--- a/src/PokemonSearch.css
+++ b/src/PokemonSearch.css
@@ -1,4 +1,4 @@
-.pokemon-container {
+.pokemon-search {
   font-family: 'Arial', sans-serif;
   text-align: center;
   padding: 20px;
@@ -8,12 +8,12 @@
   align-self: center;
 }
 
-.pokemon-container h2 {
+.pokemon-search h2 {
   color: #333;
   margin-bottom: 25px;
 }
 
-.pokemon-list {
+.pokemon-search {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
